--- a/src/scss/_lander.scss
+++ b/src/scss/_lander.scss
@@ -1,15 +1,17 @@
 @font-face {
     font-family: 'hyperspaceregular';
     src: url('../fonts/hyperspace-webfont.woff2') format('woff2'),
-         url('../fonts/hyperspace-webfont.woff') format('woff');
+        url('../fonts/hyperspace-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
 
-.atari {font-family: 'hyperspaceregular';}
+.atari {
+    font-family: 'hyperspaceregular';
+}
 
-#game{
+#game {
 
     width: 100%;
     height: 100%;
